resources/sidecar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar
  namespace: training
  labels:
    app: sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidecar
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
      - name: simpleapp
        image: 3.126.69.18/test/simpleapp:1.0
        ports:
        - containerPort: 5000
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-proxy-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-proxy-config
        configMap:
          name: sidecar
