resources/simpleapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  namespace: training
  labels:
    app: simpleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
      - name: simpleapp
        image: 3.126.69.18/test/simpleapp:1.0
        ports:
        - containerPort: 5000
