resources/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: training
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
