resources/sidecar-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sidecar
  namespace: training
  labels:
    app: sidecar
spec:
  type: NodePort
  selector:
    app: sidecar
  ports:
    - name: sidecar
      protocol: TCP
      port: 80
      targetPort: 80
