resources/simpleapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
  namespace: training
  labels:
    app: simpleapp
spec:
  type: NodePort
  selector:
    app: simpleapp
  ports:
    - name: simpleapp
      protocol: TCP
      port: 5000
      targetPort: 5000
